[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinates"
version = "0.0.1"
authors = [
  { name="Rick M. Butler", email="r.m.butler@tudelft.nl" },
]
description = "A package to convert between cartesian and polar coordinates"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: Other/Proprietary License",
    "Operating System :: OS Independent",
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"Natural Language :: English",
	"Topic :: File Formats :: JSON",
	"Topic :: Software Development :: Libraries"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://gitlab.tudelft.nl/medical-process-engineering/coordinates/"
Repository = "https://gitlab.tudelft.nl/medical-process-engineering/coordinates/"
Issues = "https://gitlab.tudelft.nl/medical-process-engineering/coordinates/-/issues"
